Trying to fix jaggies on triangle
Gradient triangles have a bit of noticeable jaggies when touching each
other.   Made them overlap so when curtains come together its not
noticeable.

--- a/Web/css/home.less
+++ b/Web/css/home.less
@@ -17,7 +17,7 @@ body{
 #css_lowerleft_curtain{
     
     position:absolute;
-    left:-300px;   
+    left:-299px;   
     top:0; 
     width:@curtain_size;
     height:@curtain_size;
@@ -43,7 +43,7 @@ body{
 #css_topright_curtain{
 
     position:absolute;
-    left:500px;   
+    left:499px;   
     top:0; 
     width:@curtain_size;
     height:@curtain_size;
@@ -51,7 +51,7 @@ body{
     border-bottom:1px solid #196a8e;
     border-right:1px solid #196a8e;
 
-    &::after{
+    &::before{
         content:"";
         display:block;
         width: @curtain_size;
@@ -61,6 +61,9 @@ body{
         margin-left:1px;
         left:-1 * @curtain_size;
         background: linear-gradient(45deg, rgba(0,0,0,0), rgba(0,0,0,0) 50%, #196a8e 50%,  #005981 60%, #005981);
+        //background: linear-gradient(45deg,  #005981, #005981 40%,  #196a8e 50%, rgba(0,0,0,0) 50%, rgba(0,0,0,0));
+
+        border-bottom:1px solid #196a8e;;
     }
 }
 
@@ -76,7 +79,6 @@ body{
 }
 
 #zano-container{
- 
     position:absolute;
     left:50%;
     margin-left: -1 * @width/2;
@@ -120,7 +122,7 @@ body{
         {
             0%{-moz-animation-delay:2s; -o-animation-delay:2s; -webkit-animation-delay:2s; animation-delay:2s;}
             0%,100%{
-                left:-300px;
+                left:-299px;
             }
             50%{left:-400px;}
         });  
@@ -131,7 +133,7 @@ body{
         .custom-animation-frames(right-curtain, 4s, infinite, ease-in-out, 
         {
             0%{-moz-animation-delay:2s; -o-animation-delay:2s; -webkit-animation-delay:2s; animation-delay:2s;}
-            0%,100%{left:500px;}
+            0%,100%{left:499px;}
             50%{left:600px;}
         });  
     }
